Fixed Rule layout issue for smaller screen width 280px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,4 +258,8 @@ table {
         font-size: 16px;
         letter-spacing: 0;
     }
+    /* rule area */
+    #rule{
+        padding:5px ;
+    }
 }
